--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="header">
         <div class="menu container">
-            <a href="#" class="logo">logo</a>
+            <a href="#" class="logo">LPS</a>
             <input type="checkbox" id="menu" />
             <label for="menu">
                 <img src="imagenes/menu.png" class="menu-icono" alt="menu">
