--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
                 </ul>
             </div>
         </div>
-        <div>
-            <h2>fuera de servicio por actualizacion</h2>
-        </div>
+
+        <span id="out-service">fuera de servicio por actualizacion</span>
 
         <div class="header-content container">
+
             <div class="header-txt">
+                
+         
                     <span>Bienvenido a La Papa Studios</span>
                     <h1>Ofertas especiales</h1>
                     <p>
