--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imagenes/no img.png" alt="">
+                <img src="imagenes/new-label-overlay-Photoroom.png" alt="">
                 <div class="product-txt"1>
                     <h3>episodio 8</h3>
                     <p>rango comun</p>
@@ -274,7 +274,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imagenes/no img.png" alt="">
+                <img src="imagenes/new-label-overlay-Photoroom.png" alt="">
                 <div class="product-txt"1>
                     <h3>episodio 8</h3>
                     <p>rango comun</p>
